www/src/css/prism.scss
.gatsby-highlight {
  background: $c-dark;
  border-radius: 10px;
  color: #fff;
  -webkit-font-smoothing: antialiased;
  overflow: hidden;
  tab-size: 1.5em;

  > code[class*="language-"],
  > pre[class*="language-"],
  > pre.prism-code {
    height: auto !important;
    margin: 1rem;
    font-size: 14px;
    line-height: 20px;
    white-space: pre-wrap;
    word-break: break-word;
  }
}

.gatsby-highlight + .gatsby-highlight {
  margin-top: 20px;
}

.gatsby-highlight-code-line {
  background-color: #393d45;
  display: block;
  margin: -0.125rem -1rem;
  padding: 0.125rem 1rem;
}

.token.attr-name {
  color: #fff;
}

.token.comment,
.token.block-comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #999999;
}

.token.property,
.token.boolean,
.token.number,
.token.function-name,
.token.constant,
.token.symbol,
.token.deleted {
  color: #aa759f;
}

.token.punctuation,
.token.tag,
.token.string {
  color: #99c27c;
}

.token.selector,
.token.char,
.token.function,
.token.builtin,
.token.inserted {
  color: #61dafb;
}

.token.operator,
.token.entity,
.token.url,
.token.variable {
  color: #99c27c;
}

.token.attr-value {
  color: #999;
}

.token.keyword {
  color: #c4f1fe;
}

.token.atrule,
.token.class-name {
  color: #61dafb;
}

.token.regex,
.token.important {
}

.language-css .token.string,
.style .token.string {
}

.token.important {
  font-weight: normal;
}

.token.bold {
  font-weight: bold;
}
.token.italic {
  font-style: italic;
}

.token.entity {
  cursor: help;
}

.namespace {
  opacity: .7;
}

